Fixe display of header on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,13 +8,13 @@ a:focus{outline:thin dotted #f89406;outline:5px auto #f89406;outline-offset:-2px
 { color: #00A03E;
   background-image: url('/images/bio-photo.svg');
   background-repeat: no-repeat;
-  padding-left: 3rem;
-  font-size: 1.5rem;
-  line-height: 1.5rem;
-  background-size: 2.4rem;
+  padding-left: 2.5rem;
+  font-size: 1.25rem;
+  line-height: 1.25rem;
+  background-size: 2rem;
   background-position: left center;
   text-decoration: none;
 }
 .masthead__menu-item > .site-title-in-header:hover {
-  line-height: 2.5rem;
+  line-height: 2rem;
 }
